(executable
 (name server)
 (modules server)
 (libraries
  dream
  lwt
  lwt.unix
  routes
  ppx_deriving_router.runtime_lib
  ppx_deriving_json.native_runtime
  yojson)
 (preprocess
  (pps ppx_deriving_router.dream lwt_ppx ppx_deriving_json.native)))

(executable
 (name server2)
 (modules server2)
 (libraries
  dream
  lwt
  lwt.unix
  routes
  ppx_deriving_router.runtime_lib
  ppx_deriving_json.native_runtime
  yojson)
 (preprocess
  (pps ppx_deriving_router.dream lwt_ppx ppx_deriving_json.native)))

(executable
 (name nested)
 (modules nested)
 (libraries
  dream
  lwt
  lwt.unix
  routes
  ppx_deriving_router.runtime_lib
  ppx_deriving_json.native_runtime
  yojson)
 (preprocess
  (pps ppx_deriving_router.dream lwt_ppx ppx_deriving_json.native)))

; (executable
;  (name nested2)
;  (modules nested2)
;  (libraries
;   dream
;   lwt
;   lwt.unix
;   routes
;   ppx_deriving_router.runtime_lib
;   ppx_deriving_json.native_runtime
;   yojson)
;  (preprocess
;   (pps ppx_deriving_router.dream lwt_ppx ppx_deriving_json.native)))

(executable
 (name playground)
 (modules playground)
 (libraries dream lwt lwt.unix routes yojson)
 (preprocess
  (pps lwt_ppx ppx_deriving_json.native)))

(library
 (name playground_react)
 (modules playground_react)
 (modes melange)
 (libraries reason-react melange.belt melange.dom routes_browser)
 (preprocess
  (pps melange.ppx reason-react-ppx)))

(library
 (name playground_react_multi)
 (modules playground_react_multi)
 (modes melange)
 (libraries reason-react melange.belt melange.dom routes_browser)
 (preprocess
  (pps melange.ppx reason-react-ppx)))
